k8s-resource-manifests/fo-perf-predictor-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fo-perf-predictor-api
  namespace: sodalite-services
spec:
  selector:
    matchLabels:
      app: fo-perf-predictor-api
  replicas: 1
  template:
    metadata:
      labels:
        app: fo-perf-predictor-api
    spec:
      containers:
      - image: sodaliteh2020/fo_perf_predictor_api:49
        name: fo-perf-predictor-api
        ports:
        - containerPort: 5000
          protocol: TCP
